More test fixes